--- a/docker/compose.prod.yml
+++ b/docker/compose.prod.yml
@@ -6,7 +6,10 @@ services:
             - "8082:8080"
         volumes:
             - me-go-pages:/home/go/pages
+            - me-ssl:/home/go/.ssl
         restart: unless-stopped
 volumes:
     me-go-pages:
+        external: true
+    me-ssl:
         external: true
