--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,12 +23,16 @@ jobs:
         with:
           name: image
           path: files/image
+      - name: Archive supfile
+        uses: actions/upload-artifact@v1
+        with:
+          name: supfile
+          path: sup
   deploy:
     name: Deploy
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
       - name: Setup Go
         uses: actions/setup-go@v1
         with:
@@ -38,6 +42,11 @@ jobs:
         with:
           name: image
           path: files/image
+      - name: Download supfile
+        uses: actions/download-artifact@v1
+        with:
+          name: supfile
+          path: sup
       - name: Setup SSH Key
         uses: webfactory/ssh-agent@v0.1.1
         with:
